# eagle-eye

./: .env.example  .gitignore  API_SPEC.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  Dockerfile.worker  ISSUES.md  LICENSE  Makefile  OSINT_DATA_SOURCES.md  OSINT_DATA_SOURCES_GWINNETT_COUNTY.md  PRODUCT_SPEC.md  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: celery_app.py  config.py  main.py
backend/app/api/: rate_limit.py
backend/app/api/v1/: address.py  auth_routes.py  enrichment.py  graph.py  search.py
backend/app/auth/: auth.py
backend/app/cache/: redis_cache.py
backend/app/connectors/: base.py  registry.py
backend/app/connectors/_disabled/: gbi_sex_offender.py  gsccca_deeds.py  gwinnett_courts.py  gwinnett_sheriff_jail.py  qpublic.py
backend/app/connectors/tier1/: bls.py  census_data.py  census_geocoder.py  courtlistener.py  epa_echo.py  (+16 more)
backend/app/database/: neo4j_driver.py  postgres_client.py
backend/app/enrichment/: conflict_resolver.py  deduplicator.py  discovery.py  log_store.py  orchestrator.py  tasks.py
backend/app/models/: entities.py  provenance.py  relationships.py  schemas.py
backend/app/rate_limiting/: limiter.py
backend/app/utils/: http_client.py
backend/app/validation/: address_validator.py
backend/tests/test_api/: test_health.py  test_models.py  test_routes.py
backend/tests/test_connectors/: test_framework.py  test_tier1_connectors.py
backend/tests/test_enrichment/: test_address_validation.py  test_conflict_resolver.py  test_deduplication.py  test_orchestrator.py
(+699 files in other folders)
